--- a/README.adoc
+++ b/README.adoc
@@ -154,7 +154,7 @@ vowels::
 Defines encoding mode for vowels. Accepts  `*encode_first*` (default) or `*encode_all*`.
 +
 [source,intent=0]
-.*encode_first*: only first vowel in the supplied word will be encoded
+.encode_first: only first vowel in the supplied word will be encoded
 ----
 упячка          → упчк
 голландский     → глнскй
@@ -162,7 +162,7 @@ Defines encoding mode for vowels. Accepts  `*encode_first*` (default) or `*encod
 ----
 +
 [source,intent=0]
-.*encode_all*: all vowels will be encoded according to the encoding rules
+.encode_all: all vowels will be encoded according to the encoding rules
 ----
 упячка          → уп2чк1
 голландский     → г1л1нск2й
