--- a/benchmark/distribution.asciidoc
+++ b/benchmark/distribution.asciidoc
@@ -1,12 +1,11 @@
 = Distribution benchmarks
 Nikolay Papakha
-:toc: macro
+:toc:
 :!toc-title:
-//:toc-title: Contents
-:toclevels: 2
+:toclevels: 4
 ---
 
-toc::[]
+//toc::[]  //macro  //:toc-title: Contents
 
 :url-throughput-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/throughput.asciidoc
 :url-misspellings-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/misspellings_and_typos.asciidoc
