--- a/README.adoc
+++ b/README.adoc
@@ -83,7 +83,8 @@ After installation plugin exposes new token filter named `*russian_phonetic*`.
 == Getting started
 
 You can start using the `*russian_phonetic*` token filter with providing analysis configuring settings:
-[source,intent=0,json]
+[source,intent=0]
+[subs="verbatim,quotes",json]
 .PUT russian_phonetic_sample
 ----
 {
@@ -111,8 +112,9 @@ You can start using the `*russian_phonetic*` token filter with providing analysi
 
 
 Then you can test analyzer with `*russian_phonetic*` token filter by running the https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-analyze.html[analyze API]
-[source,intent=0, json]
-POST russian_phonetic_sample/_analyze
+[source,intent=0]
+[subs="verbatim,quotes",json]
+.POST russian_phonetic_sample/_analyze
 ----
 {
   "analyzer": "my_analyzer",
