--- a/README.adoc
+++ b/README.adoc
@@ -84,7 +84,7 @@ After installation plugin exposes new token filter named `*russian_phonetic*`.
 
 You can start using the `*russian_phonetic*` token filter with providing analysis configuring settings:
 [source,javascript]
-.PUT russian_phonetic_sample
+.*PUT russian_phonetic_sample*
 ----
 {
   "settings": {
@@ -111,9 +111,8 @@ You can start using the `*russian_phonetic*` token filter with providing analysi
 
 
 Then you can test analyzer with `*russian_phonetic*` token filter by running the https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-analyze.html[analyze API]
-[source,intent=0]
-[subs="verbatim,quotes",json]
-.POST russian_phonetic_sample/_analyze
+[source,json]
+.*POST russian_phonetic_sample/_analyze*
 ----
 {
   "analyzer": "my_analyzer",
