--- a/README.adoc
+++ b/README.adoc
@@ -94,23 +94,20 @@ You can start using the `*russian_phonetic*` token filter with providing analysi
           "tokenizer": "standard",
           "filter": [
             "standard",
-            "russian_phonetic"  // <3>
+            "russian_phonetic"
           ]
         }
       },
       "filter": {
         "russian_phonetic": {
-          "type": "russian_phonetic",  // <1>
-          "replace": false  // <2>
+          "type": "russian_phonetic",
+          "replace": false
         }
       }
     }
   }
 }
 ----
-<1> One.
-<2> Two.
-<3> Three.
 
 Then you can test analyzer with `*russian_phonetic*` token filter by running the https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-analyze.html[analyze API]
 [source,javascript]
