--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -166,16 +166,16 @@ image::assets/throughput/it_orthographic.png[]
 [cols="1,4,4,2,3",options="header"]
 .JMH GC Profiler report for Russian Orthography
 |=========================================================
-|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count |gc time, ms
-|Russian1V[4] |486.376 ±2.963 |280.766 ±0.004 |337 |232
-|Russian1V[8] |431.104 ±2.410 |294.107 ±0.005 |299 |205
-|RussianAV[8] |427.313 ±2.555 |296.701 ±0.004 |297 |204
-|RussianAVS[8] |279.835 ±1.349 |301.254 ±0.003 |193 |133
-|BMCyrillic |1023.707 ±3.969 |19947.886 ±12.078 |590 |431
-|BMRussian |971.290 ±7.554 |19635.237 ±9.050 |559 |410
-|Metaphone[4] |751.933 ±5.057 |553.443 ±0.021 |359 |271
-|Metaphone[8] |676.291 ±4.429 |585.678 ±0.039 |322 |244
-|Soundex |710.788 ±3.802|359.192 ±0.013|408 |289
+|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
+|Russian1V[4] |486.376 ±2.963 |280.766 ±0.004 |337 ±0.001|232 ±0.001 ms
+|Russian1V[8] |431.104 ±2.410 |294.107 ±0.005 |299 ±0.001|205 ±0.001 ms
+|RussianAV[8] |427.313 ±2.555 |296.701 ±0.004 |297 ±0.001|204 ±0.001 ms
+|RussianAVS[8] |279.835 ±1.349 |301.254 ±0.003 |193 ±0.001|133 ±0.001 ms
+|BMCyrillic |1023.707 ±3.969 |19947.886 ±12.078 |590 ±0.001|431 ±0.001 ms
+|BMRussian |971.290 ±7.554 |19635.237 ±9.050 |559 ±0.001|410 ±0.001 ms
+|Metaphone[4] |751.933 ±5.057 |553.443 ±0.021 |359 ±0.001|271 ±0.001 ms
+|Metaphone[8] |676.291 ±4.429 |585.678 ±0.039 |322 ±0.001|244 ±0.001 ms
+|Soundex |710.788 ±3.802|359.192 ±0.013|408 ±0.001|289 ±0.001 ms
 |=========================================================
 
 === Results for Russian Names
