--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -202,16 +202,16 @@ image::assets/throughput/it_surnames.png[]
 [cols="1,4,4,2,3",options="header"]
 .JMH GC Profiler report for Russian Names
 |=========================================================
-|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count |gc time, ms
-|Russian1V[4] |543.331 ±3.811|334.474 ±0.003|312 |226
-|Russian1V[8] |542.050 ±4.047|346.829 ±0.005|312 |224
-|RussianAV[8] |481.711 ±3.263|350.241 ±0.004|334 |234
-|RussianAVS[8] |282.863 ±2.565|297.858 ±0.003|196 |137
-|BMCyrillic |1015.914 ±9.498|17386.565 ±8.017|584 |428
-|BMRussian |976.675 ±7.145|15966.931 ±4.679|562 |410
-|Metaphone[4] |692.634 ±5.657 |486.683 ±0.022 |331 |249
-|Metaphone[8] |630.032 ±5.051 |494.440 ±0.045 |363 |264
-|Soundex |697.296 ±3.522|329.514 ±0.016|402 |289
+|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
+|Russian1V[4] |543.331 ±3.811|334.474 ±0.003|312 ±0.001|226 ±0.001 ms
+|Russian1V[8] |542.050 ±4.047|346.829 ±0.005|312 ±0.001|224 ±0.001 ms
+|RussianAV[8] |481.711 ±3.263|350.241 ±0.004|334 ±0.001|234 ±0.001 ms
+|RussianAVS[8] |282.863 ±2.565|297.858 ±0.003|196 ±0.001|137 ±0.001 ms
+|BMCyrillic |1015.914 ±9.498|17386.565 ±8.017|584 ±0.001|428 ±0.001 ms
+|BMRussian |976.675 ±7.145|15966.931 ±4.679|562 ±0.001|410 ±0.001 ms
+|Metaphone[4] |692.634 ±5.657 |486.683 ±0.022 |331 ±0.001|249 ±0.001 ms
+|Metaphone[8] |630.032 ±5.051 |494.440 ±0.045 |363 ±0.001|264 ±0.001 ms
+|Soundex |697.296 ±3.522|329.514 ±0.016|402 ±0.001|289 ±0.001 ms
 |=========================================================
 
 === Results for Russian Morphology
@@ -238,14 +238,14 @@ image::assets/throughput/it_morphology.png[]
 [cols="1,4,4,2,3",options="header"]
 .JMH GC Profiler report for Russian Morphology
 |=========================================================
-|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count |gc time, ms
-|Russian1V[4] |497.960 ±4.202 |282.257 ±0.002 |345 |239
-|Russian1V[8] |401.271 ±2.651 |296.762 ±0.003 |278 |194
-|RussianAV[8] |427.909 ±3.330 |298.306 ±0.003 |296 |205
-|RussianAVS[8] |289.160 ±4.291 |304.492 ±0.004 |200 |139
-|BMCyrillic |1041.929 ±7.655 |23658.016 ±7.346 |600 |437
-|BMRussian |961.277 ±4.851 |23242.677 ±16.379 |553 |403
-|Metaphone[4] |733.528 ±3.678 |554.367 ±0.026 |350 |261
-|Metaphone[8] |608.637 ±4.422 |587.620 ±0.032 |350 |248
-|Soundex |735.598 ±5.799|383.995 ±0.008|351 |266
+|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
+|Russian1V[4] |497.960 ±4.202 |282.257 ±0.002 |345 ±0.001|239 ±0.001 ms
+|Russian1V[8] |401.271 ±2.651 |296.762 ±0.003 |278 ±0.001|194 ±0.001 ms
+|RussianAV[8] |427.909 ±3.330 |298.306 ±0.003 |296 ±0.001|205 ±0.001 ms
+|RussianAVS[8] |289.160 ±4.291 |304.492 ±0.004 |200 ±0.001|139 ±0.001 ms
+|BMCyrillic |1041.929 ±7.655 |23658.016 ±7.346 |600 ±0.001|437 ±0.001 ms
+|BMRussian |961.277 ±4.851 |23242.677 ±16.379 |553 ±0.001|403 ±0.001 ms
+|Metaphone[4] |733.528 ±3.678 |554.367 ±0.026 |350 ±0.001|261 ±0.001 ms
+|Metaphone[8] |608.637 ±4.422 |587.620 ±0.032 |350 ±0.001|248 ±0.001 ms
+|Soundex |735.598 ±5.799|383.995 ±0.008|351 ±0.001|266 ±0.001 ms
 |=========================================================
