--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -149,18 +149,18 @@ image::assets/throughput/it_orthographic.png[]
 
 {empty} +
 [cols="3,2,2,2,2",options="header"]
-.Encoding throughput for Russian Orthography, ops/sec
+.Encoding throughput for Russian Orthography
 |=========================================================
-|Encoder |average throughput |min |max |stdev
-|Russian1V[4] |2647597.829 ±(99.9%) 35722.091|2569171.493 |2776187.714 |72160.391
-|Russian1V[8] |2113365.341 ±(99.9%) 12859.272|2075562.782 |2154071.730 |25976.366
-|RussianAV[8] |2105996.555 ±(99.9%) 25157.316|2040640.985 |2210083.123 |50819.022
-|RussianAVS[8] |1254446.127 ±(99.9%) 15728.850|1188483.652 |1290024.829 |31773.056
-|BMCyrillic |57682.691 ±(99.9%) 261.885|56983.187 |58873.057 |529.021
-|BMRussian |57429.524 ±(99.9%) 268.025|56340.758 |58466.245 |541.423
-|Metaphone[4] |1966023.220 ±(99.9%) 11856.926|1913753.886 |2001922.957 |23951.577
-|Metaphone[8] |1603718.461 ±(99.9%) 5770.893|1586921.841 |1631197.046 |11657.490
-|Soundex |3272171.900 ±(99.9%) 38202.411|3155325.026 |3398455.535 |77170.761
+|Encoder |Average throughput |min |max |stdev
+|Russian1V[4] |2647597.829 ±(99.9%) 35722.091 ops/sec|2569171.493 |2776187.714 |72160.391
+|Russian1V[8] |2113365.341 ±(99.9%) 12859.272 ops/sec|2075562.782 |2154071.730 |25976.366
+|RussianAV[8] |2105996.555 ±(99.9%) 25157.316 ops/sec|2040640.985 |2210083.123 |50819.022
+|RussianAVS[8] |1254446.127 ±(99.9%) 15728.850 ops/sec|1188483.652 |1290024.829 |31773.056
+|BMCyrillic |57682.691 ±(99.9%) 261.885 ops/sec|56983.187 |58873.057 |529.021
+|BMRussian |57429.524 ±(99.9%) 268.025 ops/sec|56340.758 |58466.245 |541.423
+|Metaphone[4] |1966023.220 ±(99.9%) 11856.926 ops/sec|1913753.886 |2001922.957 |23951.577
+|Metaphone[8] |1603718.461 ±(99.9%) 5770.893 ops/sec|1586921.841 |1631197.046 |11657.490
+|Soundex |3272171.900 ±(99.9%) 38202.411 ops/sec|3155325.026 |3398455.535 |77170.761
 |=========================================================
 
 [cols="1,4,4,2,3",options="header"]
