--- a/benchmark/distribution.asciidoc
+++ b/benchmark/distribution.asciidoc
@@ -3,6 +3,18 @@ Nikolay Papakha
 :toc:
 :!toc-title:
 :toclevels: 4
+ifdef::env-github[]
+:imagesdir:
+ https://gist.githubusercontent.com/path/to/gist/revision/dir/with/all/images
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
+ifndef::env-github[]
+:imagesdir: ./
+endif::[]
 ---
 
 //toc::[]  //macro  //:toc-title: Contents
