--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -86,7 +86,7 @@ maxPhonemes: `1`
 maxPhonemes: `1`
 |Metaphone[4] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: `4`
 |Metaphone[8] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: `8`
-|Soundex |link:http://en.wikipedia.org/wiki/Soundex[Soundex]footnoteref:[luceneImpl] | -
+|Soundex |link:https://en.wikipedia.org/wiki/Soundex[Soundex]footnoteref:[luceneImpl] | -
 |=========================================================
 
 Soundex, Metaphone and Beider-Morse are available in link:https://www.elastic.co/guide/en/elasticsearch/plugins/current/analysis-phonetic.html[Elasticsearch Phonetic Analysis Plugin].
@@ -94,7 +94,7 @@ Beider-Morse is the only out-of-the-box option with Russian language support.
 It was designed to handle Russian words written in Cyrillic letters via `*cyrillic*` and Russian transliterated into English letters via `*russian*` languageset option value.
 For the transliteration of Russian into English letters transliterating adapter is used footnoteref:[translitGost, Letters mappings used in transliterating adapter are based on link:http://gostrf.com/normadata/1/4294816/4294816248.pdf[GOST 7.79-2000 System of standards on information, librarianship and publishing. Rules of transliteration of Cyrillic script by Latin alphabet].].
 
-[TIP]
+[WARNING]
 ====
 
 Both Metaphone and Soundex were designed to work with English language and are therefore not suited for Russian.
@@ -189,8 +189,6 @@ image::assets/throughput/it_orthographic.png[]
 |Soundex |710.788 ±3.802|359.192 ±0.013|408 ±0.001|289 ±0.001 ms
 |=========================================================
 
----
-
 === Results for Russian Names
 
 image::assets/throughput/avg_surnames.png[]
@@ -226,8 +224,6 @@ image::assets/throughput/it_surnames.png[]
 |Metaphone[8] |630.032 ±5.051 |494.440 ±0.045 |363 ±0.001|264 ±0.001 ms
 |Soundex |697.296 ±3.522|329.514 ±0.016|402 ±0.001|289 ±0.001 ms
 |=========================================================
-
----
 
 === Results for Russian Morphology
 
