--- a/benchmark/distribution.asciidoc
+++ b/benchmark/distribution.asciidoc
@@ -89,13 +89,13 @@ vowels: `*encode_first*`
 vowels: `*encode_all*`
 |RussianAVS |Russian Phonetic
 |max_code_len `in [*4*, *14*]` +
-vowels: `encode_all` +
+vowels: `*encode_all*` +
 enable_stemmer: `*true*`
 |BMCyrillic |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl,Implementation provided by link:https://lucene.apache.org/[Apache Lucene] with commons-codec:1.0.]
 |languageset: `*cyrillic*` +
 maxPhonemes: `*1*`
 |BMRussian |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl]
-|languageset: `russian` +
+|languageset: `*russian*` +
 maxPhonemes: `*1*`
 |Metaphone |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len `in [*4*, *14*]`
 |Soundex |link:https://en.wikipedia.org/wiki/Soundex[Soundex]footnoteref:[luceneImpl] | -
