--- a/README.adoc
+++ b/README.adoc
@@ -109,7 +109,7 @@ You can start using the `*russian_phonetic*` token filter with providing analysi
 
 Then you can test analyzer with `*russian_phonetic*` token filter by running the https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-analyze.html[analyze API]
 [source,javascript]
-.*_POST russian_phonetic_sample/_analyze_*
+._POST russian_phonetic_sample/_analyze_
 ----
 {
   "analyzer": "my_analyzer",
