--- a/benchmark/misspellings_and_typos.asciidoc
+++ b/benchmark/misspellings_and_typos.asciidoc
@@ -56,32 +56,32 @@ Keeping that in mind the total number of matches for each encoder can be interpr
 |=========================================================
 |Label |Algorithm |Options
 |Russian1V[4] |Russian Phonetic
-| max_code_len: `4` +
-vowels: `encode_first`
+| max_code_len: `*4*` +
+vowels: `*encode_first*`
 |Russian1V[8] |Russian Phonetic
-| max_code_len: `8` +
-vowels: `encode_first`
+| max_code_len: `*8*` +
+vowels: `*encode_first*`
 |RussianAV[8] |Russian Phonetic
-| max_code_len: `8` +
-vowels: `encode_all`
+| max_code_len: `*8*` +
+vowels: `*encode_all*`
 |RussianAVS[8] |Russian Phonetic
-| max_code_len: `8` +
-vowels: `encode_all` +
-enable_stemmer: `true`
+| max_code_len: `*8*` +
+vowels: `*encode_all*` +
+enable_stemmer: `*true*`
 |BMCyrillic |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl,Implementation provided by link:https://lucene.apache.org/[Apache Lucene] with commons-codec:1.0.]
-|languageset: `cyrillic` +
-maxPhonemes: `1`
+|languageset: `*cyrillic*` +
+maxPhonemes: `*1*`
 |BMRussian |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl]
-| languageset: `russian` +
-maxPhonemes: `1`
-|Metaphone[4] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: `4`
-|Metaphone[8] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: `8`
+| languageset: `*russian*` +
+maxPhonemes: `*1*`
+|Metaphone[4] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: `*4*`
+|Metaphone[8] |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len: `*8*`
 |Soundex |link:https://en.wikipedia.org/wiki/Soundex[Soundex]footnoteref:[luceneImpl] | -
 |=========================================================
 
-Soundex, Metaphone and Beider-Morse are available in link:https://www.elastic.co/guide/en/elasticsearch/plugins/current/analysis-phonetic.html[Elasticsearch Phonetic Analysis Plugin].
-Beider-Morse is the only out-of-the-box option with Russian language support.
-It was designed to handle Russian words written in Cyrillic letters via `cyrillic` and Russian transliterated into English letters via `russian` languageset option value.
+`*Soundex*`, `*Metaphone*` and `*Beider-Morse*` are available in link:https://www.elastic.co/guide/en/elasticsearch/plugins/current/analysis-phonetic.html[Elasticsearch Phonetic Analysis Plugin].
+`*Beider-Morse*` is the only out-of-the-box option with Russian language support.
+It was designed to handle Russian words written in Cyrillic letters via `*cyrillic*` and Russian transliterated into English letters via `*russian*` languageset option value.
 For the transliteration of Russian into English letters transliterating adapter is used footnoteref:[translitGost, Letters mappings used in transliterating adapter are based on link:http://gostrf.com/normadata/1/4294816/4294816248.pdf[GOST 7.79-2000 System of standards on information, librarianship and publishing. Rules of transliteration of Cyrillic script by Latin alphabet].].
 
 [WARNING]
